--- a/Final/index.html
+++ b/Final/index.html
@@ -51,18 +51,20 @@
                     </div>
                     <div class="banner__inner-row">
                         <div class="banner__inner-btn">
-                            <button class="banner__btn-buy">Buy Digits</button>
-                            <button class="banner__btn-see">See the Features</button>
+                            <div class="button banner__btn-buy">
+                                <a href="#">Buy Digits</a>
+                            </div>
+                            <div class="banner__btn-see">
+                                <a href="#">See the Features</a>
+                            </div>
+                            
                         </div>
                     </div>
-                    <div class="banner__inner-row">
-                        <div class="banner__inner-graphic">
-                            <img src="./image/Graphic.png" alt="">
-                        </div>
-                    </div>
-
                 </div>
             </div>
+        </div>
+        <div class="promo__graphik">
+            <img class="promo__img" src="./image/Graphic.png" alt=""> 
         </div>
         <div class="logo">
             <div class="conteiner">
@@ -100,20 +102,82 @@
                     <div class="main__inner-title">
                         <h4>Whatever work you do,<br> we're able to help</h4>
                     </div>
-                    <div class="main__inner-left">
-                        <div class="main__inner-left-photo">
-                            <div class="main__first">
-                                <img src="./image/first.png" alt="">
-                            </div>
-                            <div class="main__second">
-                                <img src="./image/second.png" alt="">
-                            </div>
-                            <div class="main__third">
-                                <img src="./image/third.png" alt="">
+                    <div class="main__box">
+                        <div class="main__inner-left">
+                            <div class="main__img">
+                                <img src="./image/people.png" alt="">
                             </div>
                         </div>
+                        <div class="main__cards">
+                            <div class="block__card icon1">
+                                <p class="card__tittle">Design and Assets</p>
+                                <span class="card__text">Make your brand stand out with pixel-perfect design crafted to perfection.</span>
+                            </div>  
+                            <div class="block__card icon2">
+                                <p class="card__tittle">Easy Content</p>
+                                <span class="card__text">Import your demos or build pages visually. Bonus: All images and illustrations included!</span>
+                            </div>
+                            <div class="block__card icon3">
+                                <p class="card__tittle">Fasr and Reliable</p>
+                                <span class="card__text">No heavy-weight plugins. No builders. No unneccesary file loading. Pure WordPress.</span>
+                            </div>
+                        </div>
+                    </div>            
+                </div>
+            </div>
+        </div>  
+        <div class="portfolio">
+            <div class="conteiner">
+                <div class="portfolio__block">
+                    <h2 class="tittle portfolio__tittle">Simplicity meets innovative design</h2>
+                    <p class="portfolio__text">It's really easy to start using Digits.
+                        Install the theme, choose a demo and
+                        start designing the future of your business!</p>
+                    <div class="button portfolio__button">
+                        <a href="#">Buy Digits</a>
                     </div>
-                       
+                    <img class="portfolio__bcg" src="./image/portfolio.png" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="revies">
+            <div class="conteiner">
+                <div class="revies__block">
+                    <h2 class="revies__tittle">What others are saying</h2>
+                    <div class="revies__card">
+                        <div class="card__box">
+                            <p class="card__text">Completely beautiful website and amazing support! This is my second website from this author and I love both of the sites so much and she has helped me so well when I needed it!</p>
+                            <img class="card__image" src="./image/revier1.png" alt="">
+                            <div class="card__name">Happy User</div>
+                            <div class="text__test">tempy.club</div>
+                        </div>
+                        <div class="card__box">
+                            <p class="card__text">Really easy to use and customize. easy to understand. Darinka helped me with my site! She answers very quickly, a good service! Thank you very much!</p>
+                            <img class="card__image" src="./image/revier2.png" alt="">
+                            <div class="card__name">Happy User</div>
+                            <div class="text__test">tempy.club</div>
+                        </div>
+                        <div class="card__box">
+                            <p class="card__text">Really pleasing to look at! Documentation (including installation instructions) are clear and that is coming from a relatively new WordPress user.</p>
+                            <img class="card__image" src="./image/revier3.png" alt="">
+                            <div class="card__name">Happy User</div>
+                            <div class="text__test">tempy.club</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="banner__bottom">
+            <div class="conteiner">
+                <div class="bunner__bottom-block">
+                    <h2 class="tittle bunner__bottom-tittle">Ready to launch your next website?</h2>
+                    <div class="bunner__bottom-box">
+                        <div class="bunner__bottom-button-box">
+                            <a class="bunner__bottom-button" href="#">Get in touch now</a>
+                        </div>
+                        <p class="bunner__bottom-text">Or, take a peek inside our design studio</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="footer">
