--- a/HW_Mobik_lesson4/index.html
+++ b/HW_Mobik_lesson4/index.html
@@ -36,14 +36,13 @@
             <div class="banner-title">Heading title</div>
             <div class="banner-text">Heading subtitle text</div>
         </div>
-
         <div class="navigation">
             <ul class="breadcrumbs">
+                <li class="breadcrumbs__home"><a href="#"><img src="./image/Home.png" alt="Home"></a></li>
                 <li><a href="#">Breadcrumbs 01</a></li>
                 <li><a href="#">Breadcrumbs 02</a></li>
             </ul>
         </div>
-
         <div class="main">
             <div class="block1"></div>
             <div class="block2"></div>
@@ -53,10 +52,10 @@
             <div class="footer-top">
                 <div class="footer-section">
                     <h3 class="footer-section-heading">Footer section 01</h3>
-                    <ul>
-                        <li>
-                            <div class="line"><img src="./image/line1.png" alt="line"></div>
-                        </li>
+                    <div class="outer">
+                        <div class="inner"></div>
+                    </div>
+                    <ul class="footer__menu">
                         <li><a href="#">Footer menu link 01</a></li>
                         <li><a href="#">Footer menu link 02</a></li>
                         <li><a href="#">Footer menu link 03</a></li>
@@ -64,10 +63,10 @@
                 </div>
                 <div class="footer-section">
                     <h3 class="footer-section-heading">Footer section 02</h3>
-                    <ul>
-                        <li>
-                            <div class="line"><img src="./image/line2.png" alt="line"></div>
-                        </li>
+                    <div class="outer">
+                        <div class="inner"></div>
+                    </div>
+                    <ul class="footer__menu"> 
                         <li><a href="#">Footer menu link 04</a></li>
                         <li><a href="#">Footer menu link 05</a></li>
                         <li><a href="#">Footer menu link 06</a></li>
@@ -75,10 +74,10 @@
                 </div>
                 <div class="footer-section">
                     <h3 class="footer-section-heading">Footer section 03</h3>
-                    <ul>
-                        <li>
-                            <!-- <div class="line"><img src="./image/line1.png" alt="line"></div> -->
-                        </li>
+                    <div class="outer">
+                        <div class="inner"></div>
+                    </div>
+                    <ul class="footer__menu">
                         <li><a href="#">Footer menu link 07</a></li>
                         <li><a href="#">Footer menu link 08</a></li>
                         <li><a href="#">Footer menu link 09</a></li>
@@ -86,10 +85,10 @@
                 </div>
                 <div class="footer-section">
                     <h3 class="footer-section-heading">Footer section 04</h3>
-                    <ul>
-                        <li>
-                            <!-- <div class="line"><img src="./image/line1.png" alt="line"></div> -->
-                        </li>
+                    <div class="outer">
+                        <div class="inner"></div>
+                    </div>
+                    <ul class="footer__menu">
                         <li>
                             <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
                                 and the stars had ceased to twinkle.By the same illusion which lifts the horizon</p>
@@ -98,23 +97,21 @@
                 </div>
             </div>
             <div class="footer-bottom">
-
+                <span class="social-right">© Copyright</span>
+                <div class="social-icon">
+                    <a href="#">
+                        <img src="image/Facebook.png">
+                    </a>
+                    <a href="#">
+                        <img src="image/Twitter.png">
+                    </a>
+                    <a href="#">
+                        <img src="image/Instagram.png">
+                    </a>
+                </div>
 
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
     </div>
 </body>
 
