--- a/HW_lesson8/index.html
+++ b/HW_lesson8/index.html
@@ -18,29 +18,29 @@
    <div class="wraper">
        <div class="header">
            <div class="header__logo">
-            <img src="./image/logo.png" alt="Medi">
+                <a href="#"><img src="./image/logo.png" alt="Medi"></a>
            </div>
-        <nav class="header__nav">
-            <ul class="header__nav-list">
-                <li><a href="#"></a>Home</li>
-                <li><a href="#"></a>About</li>
-                <li><a href="#"></a>Blog</li>
-                <li><a href="#"></a>Contact</li>
-            </ul>
-        </nav>
-        <div class="header__btn">
-            <button class="header__btn-1" type="button">Sign in</button>
-            <button class="header__btn-2" type="button">Sign up</button>
+            <nav class="header__nav">
+                <ul class="header__nav-list">
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>About</li>
+                    <li><a href="#"></a>Blog</li>
+                    <li><a href="#"></a>Contact</li>
+                </ul>
+            </nav>
+            <div class="header__btn">
+                <button class="header__btn-in" type="button">Sign in</button>
+                <button class="header__btn-up" type="button">Sign up</button>
+            </div>
         </div>
-    </div>
-    <div class="main">
-        <div class="main__content">
-            <h1>Stay Productive &
+        <div class="main">
+            <div class="main__content">
+                <h1>Stay Productive &
                 Work Remotely</h1>
-            <p>The key to work-from-home success is to create an 
+                <p>The key to work-from-home success is to create an 
                     enviroment that allows you to focus on the tasks at hand. Whether you are working from home for the first time.</p>
-            <button class="main__content-btn" type="button">Learn more</button>   
-        </div>
+                <button class="main__content-btn" type="button">Learn more</button>   
+            </div>
         <div class="main__banner"></div>
             <div class="main__banner-img">
                 <img src="./image/Girl.png" alt="girl">
