--- a/HW_lesson9/index.html
+++ b/HW_lesson9/index.html
@@ -16,20 +16,20 @@
         <div class="header">
             <p>We Are Real Creators</p>
             <div class="header__btn">
-            <a class="header__btn-orange" href="#">Follow</a>
-            <a class="header__btn-grey" href="#">Go Home</a>
+            <a class="button header__btn-orange" href="#">Follow</a>
+            <a class="button header__btn-grey" href="#">Go Home</a>
             </div>
         </div>
         <div class="main">
-            <div class="main__item-1"><span>Cool Glasses</span></div>
-            <div class="main__item-2"><span>Cool MacBook</span></div>
-            <div class="main__item-3"><span>Cool iMac</span></div>
-            <div class="main__item-4"><span>Cool Hacking</span></div>
-            <div class="main__item-5"><span>Cool Glasses</span></div>
-            <div class="main__item-9"><span>Cool Hacking</span></div>
-            <div class="main__item-6"><span>Cool Notebook</span></div>
-            <div class="main__item-7"><span>Cool Code</span></div>
-            <div class="main__item-8"><span>Cool Timer</span></div>
+            <div class="main__item-gzglasses"><span>Cool Glasses</span></div>
+            <div class="main__item-macbook"><span>Cool MacBook</span></div>
+            <div class="main__item-imac"><span>Cool iMac</span></div>
+            <div class="main__item-hacking"><span>Cool Hacking</span></div>
+            <div class="main__item-glasses"><span>Cool Glasses</span></div>
+            <div class="main__item-vrhacking"><span>Cool Hacking</span></div>
+            <div class="main__item-notebook"><span>Cool Notebook</span></div>
+            <div class="main__item-code"><span>Cool Code</span></div>
+            <div class="main__item-timer"><span>Cool Timer</span></div>
             
         </div>
     </div>
