finished Final work

--- a/Final/index.html
+++ b/Final/index.html
@@ -109,15 +109,15 @@
                             </div>
                         </div>
                         <div class="main__cards">
-                            <div class="block__card icon1">
+                            <div class="block__card icon-one">
                                 <p class="card__tittle">Design and Assets</p>
                                 <span class="card__text">Make your brand stand out with pixel-perfect design crafted to perfection.</span>
                             </div>  
-                            <div class="block__card icon2">
+                            <div class="block__card icon-two">
                                 <p class="card__tittle">Easy Content</p>
                                 <span class="card__text">Import your demos or build pages visually. Bonus: All images and illustrations included!</span>
                             </div>
-                            <div class="block__card icon3">
+                            <div class="block__card icon-three">
                                 <p class="card__tittle">Fasr and Reliable</p>
                                 <span class="card__text">No heavy-weight plugins. No builders. No unneccesary file loading. Pure WordPress.</span>
                             </div>
@@ -182,8 +182,60 @@
         </div>
         <div class="footer">
             <div class="conteiner">
-                <div class="footer__inner">
-
+                <div class="footer__block">
+                    <div class="desc__footer">
+                        <a class="logo" href="#">
+                            <img src="./image/logo.png" alt="logo">
+                        </a>
+                        <p class="desc__footer-text">Digits is a website template built to work seamlesly with the WordPress block editor to create beautifully designed pages in minutes.</p>
+                    </div>
+                    <div class="pages">
+                        <p class="tittles pages__tittle">Pages</p>
+                        <ul class="pages__link">
+                            <li><a href="#"></a>Home</li>
+                            <li><a href="#"></a>About</li>
+                            <li><a href="#"></a>News</li>
+                            <li><a href="#"></a>Pricing</li>
+                            <li><a href="#"></a>Contact</li>
+                        </ul>
+                    </div>
+                    <div class="demons">
+                        <p class="tittles demons__tittle">Demons</p>
+                        <ul class="pages__link">
+                            <li><a href="#"></a>Classic</li>
+                            <li><a href="#"></a>Boxy</li>
+                            <li><a href="#"></a>Gradient</li>
+                            <li><a href="#"></a>Minimal</li>
+                            <li><a href="#"></a>Night</li>
+                        </ul>
+                    </div>
+                    <div class="resourses">
+                        <p class="tittles resourses__tittle">Resources</p>
+                        <div class="social__links">
+                            <a href="#"><img src="./image/icon-facebook.png" alt="Facebook"></a>
+                            <a href="#"><img src="./image/icon-instagram.png" alt="Instagram"></a>
+                            <a href="#"><img src="./image/icon-twitter.png" alt="Twitter"></a>
+                            <a href="#"><img src="./image/icon-dribbble.png" alt="Dribble"></a>
+                            <a href="#"><img src="./image/icon-envato.png" alt="Envato"></a>
+                        </div>
+                        <ul class="resourses__link">
+                            <li><a href="#">Download now</a></li>
+                            <li><a href="#">Documentation</a>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="border"></div>
+        </div>
+        <div class="info">
+            <div class="continer">
+                <div class="info__block">
+                    <h2 class="info__tittle">Copyright © 2020 tempy.club</h2>
+                    <div class="info__links">
+                        <a class="info__text" href="#">Privacy Policy</a>
+                        <a class="info__text"  href="#">Terms of Use</a>
+                        <a class="info__text" href="#">GDPR</a>
+                    </div>
                 </div>
             </div>
         </div>
